qt/quick/gen_qquickitem.h

typedef struct QChildEvent QChildEvent;
typedef struct QCursor QCursor;
typedef struct QEvent QEvent;
typedef struct QMatrix4x4 QMatrix4x4;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPointF QPointF;
typedef struct QQuickItem QQuickItem;
typedef struct QQuickTransform QQuickTransform;
typedef struct QQuickWindow QQuickWindow;
typedef struct QRectF QRectF;
typedef struct QSizeF QSizeF;
typedef struct QTimerEvent QTimerEvent;
QQuickTransform* QQuickTransform_new();
QQuickTransform* QQuickTransform_new2(QObject* parent);
QMetaObject* QQuickTransform_metaObject(const QQuickTransform* self);
void* QQuickTransform_metacast(QQuickTransform* self, const char* param1);
int QQuickTransform_metacall(QQuickTransform* self, int param1, int param2, void** param3);
struct miqt_string QQuickTransform_tr(const char* s);
struct miqt_string QQuickTransform_trUtf8(const char* s);
void QQuickTransform_appendToItem(QQuickTransform* self, QQuickItem* param1);
void QQuickTransform_prependToItem(QQuickTransform* self, QQuickItem* param1);
void QQuickTransform_applyTo(const QQuickTransform* self, QMatrix4x4* matrix);
struct miqt_string QQuickTransform_tr2(const char* s, const char* c);
struct miqt_string QQuickTransform_tr3(const char* s, const char* c, int n);
struct miqt_string QQuickTransform_trUtf82(const char* s, const char* c);
struct miqt_string QQuickTransform_trUtf83(const char* s, const char* c, int n);
bool QQuickTransform_override_virtual_metacall(void* self, intptr_t slot);
int QQuickTransform_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QQuickTransform_override_virtual_applyTo(void* self, intptr_t slot);
bool QQuickTransform_override_virtual_event(void* self, intptr_t slot);
bool QQuickTransform_virtualbase_event(void* self, QEvent* event);
bool QQuickTransform_override_virtual_eventFilter(void* self, intptr_t slot);
bool QQuickTransform_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QQuickTransform_override_virtual_timerEvent(void* self, intptr_t slot);
void QQuickTransform_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QQuickTransform_override_virtual_childEvent(void* self, intptr_t slot);
void QQuickTransform_virtualbase_childEvent(void* self, QChildEvent* event);
bool QQuickTransform_override_virtual_customEvent(void* self, intptr_t slot);
void QQuickTransform_virtualbase_customEvent(void* self, QEvent* event);
bool QQuickTransform_override_virtual_connectNotify(void* self, intptr_t slot);
void QQuickTransform_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QQuickTransform_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QQuickTransform_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QQuickTransform_delete(QQuickTransform* self);
QQuickItem* QQuickItem_new();
QQuickItem* QQuickItem_new2(QQuickItem* parent);
QMetaObject* QQuickItem_metaObject(const QQuickItem* self);
void* QQuickItem_metacast(QQuickItem* self, const char* param1);
int QQuickItem_metacall(QQuickItem* self, int param1, int param2, void** param3);
struct miqt_string QQuickItem_tr(const char* s);
struct miqt_string QQuickItem_trUtf8(const char* s);
QQuickWindow* QQuickItem_window(const QQuickItem* self);
QQuickItem* QQuickItem_parentItem(const QQuickItem* self);
void QQuickItem_setParentItem(QQuickItem* self, QQuickItem* parent);
void QQuickItem_stackBefore(QQuickItem* self, QQuickItem* param1);
void QQuickItem_stackAfter(QQuickItem* self, QQuickItem* param1);
QRectF* QQuickItem_childrenRect(QQuickItem* self);
struct miqt_array /* of QQuickItem* */  QQuickItem_childItems(const QQuickItem* self);
bool QQuickItem_clip(const QQuickItem* self);
void QQuickItem_setClip(QQuickItem* self, bool clip);
struct miqt_string QQuickItem_state(const QQuickItem* self);
void QQuickItem_setState(QQuickItem* self, struct miqt_string state);
double QQuickItem_baselineOffset(const QQuickItem* self);
void QQuickItem_setBaselineOffset(QQuickItem* self, double baselineOffset);
double QQuickItem_x(const QQuickItem* self);
double QQuickItem_y(const QQuickItem* self);
QPointF* QQuickItem_position(const QQuickItem* self);
void QQuickItem_setX(QQuickItem* self, double x);
void QQuickItem_setY(QQuickItem* self, double y);
void QQuickItem_setPosition(QQuickItem* self, QPointF* position);
double QQuickItem_width(const QQuickItem* self);
void QQuickItem_setWidth(QQuickItem* self, double width);
void QQuickItem_resetWidth(QQuickItem* self);
void QQuickItem_setImplicitWidth(QQuickItem* self, double implicitWidth);
double QQuickItem_implicitWidth(const QQuickItem* self);
double QQuickItem_height(const QQuickItem* self);
void QQuickItem_setHeight(QQuickItem* self, double height);
void QQuickItem_resetHeight(QQuickItem* self);
void QQuickItem_setImplicitHeight(QQuickItem* self, double implicitHeight);
double QQuickItem_implicitHeight(const QQuickItem* self);
QSizeF* QQuickItem_size(const QQuickItem* self);
void QQuickItem_setSize(QQuickItem* self, QSizeF* size);
int QQuickItem_transformOrigin(const QQuickItem* self);
void QQuickItem_setTransformOrigin(QQuickItem* self, int transformOrigin);
QPointF* QQuickItem_transformOriginPoint(const QQuickItem* self);
void QQuickItem_setTransformOriginPoint(QQuickItem* self, QPointF* transformOriginPoint);
double QQuickItem_z(const QQuickItem* self);
void QQuickItem_setZ(QQuickItem* self, double z);
double QQuickItem_rotation(const QQuickItem* self);
void QQuickItem_setRotation(QQuickItem* self, double rotation);
double QQuickItem_scale(const QQuickItem* self);
void QQuickItem_setScale(QQuickItem* self, double scale);
double QQuickItem_opacity(const QQuickItem* self);
void QQuickItem_setOpacity(QQuickItem* self, double opacity);
bool QQuickItem_isVisible(const QQuickItem* self);
void QQuickItem_setVisible(QQuickItem* self, bool visible);
bool QQuickItem_isEnabled(const QQuickItem* self);
void QQuickItem_setEnabled(QQuickItem* self, bool enabled);
bool QQuickItem_smooth(const QQuickItem* self);
void QQuickItem_setSmooth(QQuickItem* self, bool smooth);
bool QQuickItem_activeFocusOnTab(const QQuickItem* self);
void QQuickItem_setActiveFocusOnTab(QQuickItem* self, bool activeFocusOnTab);
bool QQuickItem_antialiasing(const QQuickItem* self);
void QQuickItem_setAntialiasing(QQuickItem* self, bool antialiasing);
void QQuickItem_resetAntialiasing(QQuickItem* self);
int QQuickItem_flags(const QQuickItem* self);
void QQuickItem_setFlag(QQuickItem* self, int flag);
void QQuickItem_setFlags(QQuickItem* self, int flags);
QRectF* QQuickItem_boundingRect(const QQuickItem* self);
QRectF* QQuickItem_clipRect(const QQuickItem* self);
bool QQuickItem_hasActiveFocus(const QQuickItem* self);
bool QQuickItem_hasFocus(const QQuickItem* self);
void QQuickItem_setFocus(QQuickItem* self, bool focus);
void QQuickItem_setFocus2(QQuickItem* self, bool focus, int reason);
bool QQuickItem_isFocusScope(const QQuickItem* self);
QQuickItem* QQuickItem_scopedFocusItem(const QQuickItem* self);
bool QQuickItem_isAncestorOf(const QQuickItem* self, QQuickItem* child);
int QQuickItem_acceptedMouseButtons(const QQuickItem* self);
void QQuickItem_setAcceptedMouseButtons(QQuickItem* self, int buttons);
bool QQuickItem_acceptHoverEvents(const QQuickItem* self);
void QQuickItem_setAcceptHoverEvents(QQuickItem* self, bool enabled);
bool QQuickItem_acceptTouchEvents(const QQuickItem* self);
void QQuickItem_setAcceptTouchEvents(QQuickItem* self, bool accept);
QCursor* QQuickItem_cursor(const QQuickItem* self);
void QQuickItem_setCursor(QQuickItem* self, QCursor* cursor);