qt/quick/gen_qquickitem.nim


proc fcQQuickTransform_new(): ptr cQQuickTransform {.importc: "QQuickTransform_new".}
proc fcQQuickTransform_new2(parent: pointer): ptr cQQuickTransform {.importc: "QQuickTransform_new2".}
proc fcQQuickTransform_metaObject(self: pointer, ): pointer {.importc: "QQuickTransform_metaObject".}
proc fcQQuickTransform_metacast(self: pointer, param1: cstring): pointer {.importc: "QQuickTransform_metacast".}
proc fcQQuickTransform_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QQuickTransform_metacall".}
proc fcQQuickTransform_tr(s: cstring): struct_miqt_string {.importc: "QQuickTransform_tr".}
proc fcQQuickTransform_trUtf8(s: cstring): struct_miqt_string {.importc: "QQuickTransform_trUtf8".}
proc fcQQuickTransform_appendToItem(self: pointer, param1: pointer): void {.importc: "QQuickTransform_appendToItem".}
proc fcQQuickTransform_prependToItem(self: pointer, param1: pointer): void {.importc: "QQuickTransform_prependToItem".}
proc fcQQuickTransform_applyTo(self: pointer, matrix: pointer): void {.importc: "QQuickTransform_applyTo".}
proc fcQQuickTransform_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QQuickTransform_tr2".}
proc fcQQuickTransform_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QQuickTransform_tr3".}
proc fcQQuickTransform_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QQuickTransform_trUtf82".}
proc fcQQuickTransform_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QQuickTransform_trUtf83".}
proc fQQuickTransform_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QQuickTransform_virtualbase_metacall".}
proc fcQQuickTransform_override_virtual_metacall(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_metacall".}
proc fcQQuickTransform_override_virtual_applyTo(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_applyTo".}
proc fQQuickTransform_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QQuickTransform_virtualbase_event".}
proc fcQQuickTransform_override_virtual_event(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_event".}
proc fQQuickTransform_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QQuickTransform_virtualbase_eventFilter".}
proc fcQQuickTransform_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_eventFilter".}
proc fQQuickTransform_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QQuickTransform_virtualbase_timerEvent".}
proc fcQQuickTransform_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_timerEvent".}
proc fQQuickTransform_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QQuickTransform_virtualbase_childEvent".}
proc fcQQuickTransform_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_childEvent".}
proc fQQuickTransform_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QQuickTransform_virtualbase_customEvent".}
proc fcQQuickTransform_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_customEvent".}
proc fQQuickTransform_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QQuickTransform_virtualbase_connectNotify".}
proc fcQQuickTransform_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_connectNotify".}
proc fQQuickTransform_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QQuickTransform_virtualbase_disconnectNotify".}
proc fcQQuickTransform_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QQuickTransform_override_virtual_disconnectNotify".}
proc fcQQuickTransform_delete(self: pointer) {.importc: "QQuickTransform_delete".}
proc fcQQuickItem_new(): ptr cQQuickItem {.importc: "QQuickItem_new".}
proc fcQQuickItem_new2(parent: pointer): ptr cQQuickItem {.importc: "QQuickItem_new2".}
proc fcQQuickItem_metaObject(self: pointer, ): pointer {.importc: "QQuickItem_metaObject".}
proc fcQQuickItem_metacast(self: pointer, param1: cstring): pointer {.importc: "QQuickItem_metacast".}
proc fcQQuickItem_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QQuickItem_metacall".}
proc fcQQuickItem_tr(s: cstring): struct_miqt_string {.importc: "QQuickItem_tr".}
proc fcQQuickItem_trUtf8(s: cstring): struct_miqt_string {.importc: "QQuickItem_trUtf8".}
proc fcQQuickItem_window(self: pointer, ): pointer {.importc: "QQuickItem_window".}
proc fcQQuickItem_parentItem(self: pointer, ): pointer {.importc: "QQuickItem_parentItem".}
proc fcQQuickItem_setParentItem(self: pointer, parent: pointer): void {.importc: "QQuickItem_setParentItem".}
proc fcQQuickItem_stackBefore(self: pointer, param1: pointer): void {.importc: "QQuickItem_stackBefore".}
proc fcQQuickItem_stackAfter(self: pointer, param1: pointer): void {.importc: "QQuickItem_stackAfter".}
proc fcQQuickItem_childrenRect(self: pointer, ): pointer {.importc: "QQuickItem_childrenRect".}
proc fcQQuickItem_childItems(self: pointer, ): struct_miqt_array {.importc: "QQuickItem_childItems".}
proc fcQQuickItem_clip(self: pointer, ): bool {.importc: "QQuickItem_clip".}
proc fcQQuickItem_setClip(self: pointer, clip: bool): void {.importc: "QQuickItem_setClip".}
proc fcQQuickItem_state(self: pointer, ): struct_miqt_string {.importc: "QQuickItem_state".}
proc fcQQuickItem_setState(self: pointer, state: struct_miqt_string): void {.importc: "QQuickItem_setState".}
proc fcQQuickItem_baselineOffset(self: pointer, ): float64 {.importc: "QQuickItem_baselineOffset".}
proc fcQQuickItem_setBaselineOffset(self: pointer, baselineOffset: float64): void {.importc: "QQuickItem_setBaselineOffset".}
proc fcQQuickItem_x(self: pointer, ): float64 {.importc: "QQuickItem_x".}
proc fcQQuickItem_y(self: pointer, ): float64 {.importc: "QQuickItem_y".}
proc fcQQuickItem_position(self: pointer, ): pointer {.importc: "QQuickItem_position".}
proc fcQQuickItem_setX(self: pointer, x: float64): void {.importc: "QQuickItem_setX".}
proc fcQQuickItem_setY(self: pointer, y: float64): void {.importc: "QQuickItem_setY".}
proc fcQQuickItem_setPosition(self: pointer, position: pointer): void {.importc: "QQuickItem_setPosition".}
proc fcQQuickItem_width(self: pointer, ): float64 {.importc: "QQuickItem_width".}
proc fcQQuickItem_setWidth(self: pointer, width: float64): void {.importc: "QQuickItem_setWidth".}
proc fcQQuickItem_resetWidth(self: pointer, ): void {.importc: "QQuickItem_resetWidth".}
proc fcQQuickItem_setImplicitWidth(self: pointer, implicitWidth: float64): void {.importc: "QQuickItem_setImplicitWidth".}
proc fcQQuickItem_implicitWidth(self: pointer, ): float64 {.importc: "QQuickItem_implicitWidth".}
proc fcQQuickItem_height(self: pointer, ): float64 {.importc: "QQuickItem_height".}
proc fcQQuickItem_setHeight(self: pointer, height: float64): void {.importc: "QQuickItem_setHeight".}
proc fcQQuickItem_resetHeight(self: pointer, ): void {.importc: "QQuickItem_resetHeight".}
proc fcQQuickItem_setImplicitHeight(self: pointer, implicitHeight: float64): void {.importc: "QQuickItem_setImplicitHeight".}
proc fcQQuickItem_implicitHeight(self: pointer, ): float64 {.importc: "QQuickItem_implicitHeight".}
proc fcQQuickItem_size(self: pointer, ): pointer {.importc: "QQuickItem_size".}
proc fcQQuickItem_setSize(self: pointer, size: pointer): void {.importc: "QQuickItem_setSize".}
proc fcQQuickItem_transformOrigin(self: pointer, ): cint {.importc: "QQuickItem_transformOrigin".}
proc fcQQuickItem_setTransformOrigin(self: pointer, transformOrigin: cint): void {.importc: "QQuickItem_setTransformOrigin".}
proc fcQQuickItem_transformOriginPoint(self: pointer, ): pointer {.importc: "QQuickItem_transformOriginPoint".}
proc fcQQuickItem_setTransformOriginPoint(self: pointer, transformOriginPoint: pointer): void {.importc: "QQuickItem_setTransformOriginPoint".}
proc fcQQuickItem_z(self: pointer, ): float64 {.importc: "QQuickItem_z".}
proc fcQQuickItem_setZ(self: pointer, z: float64): void {.importc: "QQuickItem_setZ".}
proc fcQQuickItem_rotation(self: pointer, ): float64 {.importc: "QQuickItem_rotation".}
proc fcQQuickItem_setRotation(self: pointer, rotation: float64): void {.importc: "QQuickItem_setRotation".}
proc fcQQuickItem_scale(self: pointer, ): float64 {.importc: "QQuickItem_scale".}
proc fcQQuickItem_setScale(self: pointer, scale: float64): void {.importc: "QQuickItem_setScale".}
proc fcQQuickItem_opacity(self: pointer, ): float64 {.importc: "QQuickItem_opacity".}
proc fcQQuickItem_setOpacity(self: pointer, opacity: float64): void {.importc: "QQuickItem_setOpacity".}
proc fcQQuickItem_isVisible(self: pointer, ): bool {.importc: "QQuickItem_isVisible".}
proc fcQQuickItem_setVisible(self: pointer, visible: bool): void {.importc: "QQuickItem_setVisible".}
proc fcQQuickItem_isEnabled(self: pointer, ): bool {.importc: "QQuickItem_isEnabled".}
proc fcQQuickItem_setEnabled(self: pointer, enabled: bool): void {.importc: "QQuickItem_setEnabled".}
proc fcQQuickItem_smooth(self: pointer, ): bool {.importc: "QQuickItem_smooth".}
proc fcQQuickItem_setSmooth(self: pointer, smooth: bool): void {.importc: "QQuickItem_setSmooth".}
proc fcQQuickItem_activeFocusOnTab(self: pointer, ): bool {.importc: "QQuickItem_activeFocusOnTab".}
proc fcQQuickItem_setActiveFocusOnTab(self: pointer, activeFocusOnTab: bool): void {.importc: "QQuickItem_setActiveFocusOnTab".}
proc fcQQuickItem_antialiasing(self: pointer, ): bool {.importc: "QQuickItem_antialiasing".}
proc fcQQuickItem_setAntialiasing(self: pointer, antialiasing: bool): void {.importc: "QQuickItem_setAntialiasing".}
proc fcQQuickItem_resetAntialiasing(self: pointer, ): void {.importc: "QQuickItem_resetAntialiasing".}
proc fcQQuickItem_flags(self: pointer, ): cint {.importc: "QQuickItem_flags".}
proc fcQQuickItem_setFlag(self: pointer, flag: cint): void {.importc: "QQuickItem_setFlag".}
proc fcQQuickItem_setFlags(self: pointer, flags: cint): void {.importc: "QQuickItem_setFlags".}
proc fcQQuickItem_boundingRect(self: pointer, ): pointer {.importc: "QQuickItem_boundingRect".}
proc fcQQuickItem_clipRect(self: pointer, ): pointer {.importc: "QQuickItem_clipRect".}
proc fcQQuickItem_hasActiveFocus(self: pointer, ): bool {.importc: "QQuickItem_hasActiveFocus".}
proc fcQQuickItem_hasFocus(self: pointer, ): bool {.importc: "QQuickItem_hasFocus".}
proc fcQQuickItem_setFocus(self: pointer, focus: bool): void {.importc: "QQuickItem_setFocus".}
proc fcQQuickItem_setFocus2(self: pointer, focus: bool, reason: cint): void {.importc: "QQuickItem_setFocus2".}
proc fcQQuickItem_isFocusScope(self: pointer, ): bool {.importc: "QQuickItem_isFocusScope".}
proc fcQQuickItem_scopedFocusItem(self: pointer, ): pointer {.importc: "QQuickItem_scopedFocusItem".}
proc fcQQuickItem_isAncestorOf(self: pointer, child: pointer): bool {.importc: "QQuickItem_isAncestorOf".}
proc fcQQuickItem_acceptedMouseButtons(self: pointer, ): cint {.importc: "QQuickItem_acceptedMouseButtons".}
proc fcQQuickItem_setAcceptedMouseButtons(self: pointer, buttons: cint): void {.importc: "QQuickItem_setAcceptedMouseButtons".}
proc fcQQuickItem_acceptHoverEvents(self: pointer, ): bool {.importc: "QQuickItem_acceptHoverEvents".}
proc fcQQuickItem_setAcceptHoverEvents(self: pointer, enabled: bool): void {.importc: "QQuickItem_setAcceptHoverEvents".}
proc fcQQuickItem_acceptTouchEvents(self: pointer, ): bool {.importc: "QQuickItem_acceptTouchEvents".}
proc fcQQuickItem_setAcceptTouchEvents(self: pointer, accept: bool): void {.importc: "QQuickItem_setAcceptTouchEvents".}
proc fcQQuickItem_cursor(self: pointer, ): pointer {.importc: "QQuickItem_cursor".}
proc fcQQuickItem_setCursor(self: pointer, cursor: pointer): void {.importc: "QQuickItem_setCursor".}
